WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115502
FastMalloc.cpp should use system defined page size instead of literal constant
https://bugs.webkit.org/show_bug.cgi?id=115502
Summary
FastMalloc.cpp should use system defined page size instead of literal constant
Michael Saboff
Reported
2013-05-01 18:02:09 PDT
FastMalloc.cpp uses kPageShift to derive page size of the OS for various data structures. Currently it is set at 12: static const size_t kPageShift = 12 Instead FastMalloc.cpp should use a system define. For Mac this is PAGE_SHIFT (and possibly other OS'es as well).
Attachments
Patch
(1.99 KB, patch)
2013-05-01 18:09 PDT
,
Michael Saboff
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2013-05-01 18:09:43 PDT
Created
attachment 200293
[details]
Patch Only added Mac specific use of system define. Other platform partners can add appropriate values.
Geoffrey Garen
Comment 2
2013-05-01 18:15:08 PDT
Comment on
attachment 200293
[details]
Patch r=me
Michael Saboff
Comment 3
2013-05-01 18:22:03 PDT
Committed
r149472
: <
http://trac.webkit.org/changeset/149472
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug