FastMalloc.cpp should use system defined page size instead of literal constant https://bugs.webkit.org/show_bug.cgi?id=115502

Reviewed by Geoffrey Garen.

Updated kPageShift to be PAGE_SHIFT for Mac.  Changed kMaxSize to be fixed at 32K.
Updated kNumClasses for 4K and 16K page sizes.

* wtf/FastMalloc.cpp:
kPageShift: Changed this to be PAGE_SHIFT on mac.


Canonical link: https://commits.webkit.org/133948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149472 268f45cc-cd09-0410-ab3c-d52691b4dbfc